<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CronometroActivity">

    <TextView
        android:id="@+id/CronometroTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:text="@string/menu_Cronometro"
        />

    <TextView
        android:id="@+id/Cronometro_actividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginVertical="80dp"
        android:text="@string/actividad"
        />

    <TextView
        android:id="@+id/txt_calorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginVertical="640dp"
        android:text="@string/calorias"
        />

    <ImageView
        android:id="@+id/image_circulo"
        android:layout_width="270dp"
        android:layout_height="270dp"
        app:srcCompat="@drawable/circulo_cronometro"
        android:layout_centerInParent="true"
        />

    <ImageView
        android:id="@+id/image_rectangulo"
        android:layout_width="360dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/cuadrado_cronometro"
        android:layout_marginLeft="25dp"
        android:layout_marginVertical="600dp"
        />

    <ImageButton
        android:id="@+id/btn_caminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginVertical="125dp"
        android:background="@color/colorAccent"
        app:srcCompat="@drawable/caminar" />

    <ImageButton
        android:id="@+id/btn_correr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginVertical="125dp"
        android:background="@color/colorAccent"
        app:srcCompat="@drawable/correr" />

    <ImageButton
        android:id="@+id/btn_bicicleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="215dp"
        android:layout_marginVertical="125dp"
        android:background="@color/colorAccent"
        app:srcCompat="@drawable/bicicleta" />

    <ImageButton
        android:id="@+id/btn_nadar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="310dp"
        android:layout_marginVertical="125dp"
        android:background="@color/colorAccent"
        app:srcCompat="@drawable/nadar" />

    <Chronometer
        android:id="@+id/cronometro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/btn_iniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginVertical="520dp"
        android:text="Iniciar" />

    <Button
        android:id="@+id/btn_detener"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginVertical="520dp"
        android:text="Detener" />

    <Button
        android:id="@+id/btn_reiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="295dp"
        android:layout_marginVertical="520dp"
        android:text="Reiniciar" />

</RelativeLayout>